--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ section7/starter_code/__pycache__
 section7/starter_code/models/__pycache__
 section7/starter_code/resources/__pycache__
 section7/starter_code/data.db
+section10/venv
+section10/.idea
